# Stargazer

./: Dockerfile  README.md  asgi.py  docker-compose.yml  pyproject.toml
stargazer/: app.py  main.py
stargazer/api/: __init__.py  api.py
stargazer/crud/: user.py
stargazer/db/: database.py
stargazer/helpers/: auth.py  github.py
stargazer/models/: __init__.py  user.py
stargazer/schemas/: __init__.py  startneighbor.py
stargazer/scripts/: create_super_user.py
stargazer/tests/: conftest.py  test_api.py  test_github_api.py  test_models.py  test_schemas.py  test_scripts.py  tests.py
tests/: test.py
